Fix bottom margin on mobile

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@
 
   h4 {
     font-size: 24px !important;
+    margin-bottom: 0 !important;
   }
 
   .heart {
@@ -50,7 +51,7 @@ h3 {
 h4 {
   max-width: 700px;
   font-weight: 300;
-  margin-bottom: 16px;
+  margin-bottom: 32px;
 }
 
 h5 {
